# tool-zalo-playright

./: .gitignore  README.md  listen.ts  pyproject.toml  run-zalo-gui-console.bat  run-zalo-gui.bat  schema.sql
.specify/memory/: constitution.md
examples/: sample_workflow.json  wikipedia_search_workflow.json
specs/001-playwright-workflow-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-zalo-chrome-profile-gui/: plan.md  spec.md  tasks.md
specs/003-zalo-multi-profile-manager/: plan.md  spec.md  tasks.md
specs/004-zalo-multi-profile-grid-launcher/: plan.md  spec.md  tasks.md
specs/005-zalo-tabbed-cookie-account-manager/: plan.md  spec.md  tasks.md
specs/006-zalo-zca-session-webhook-bridge/: spec.md
specs/007-zalo-manual-click-target-testing/: spec.md
specs/example/: plan.md  (+2 more)
tests/: test_click_target_support.py  test_click_zalo_element.py  test_ingest_zalo_message_webhook.py  test_json_saved_profile_library_store.py  test_json_zalo_workspace_store.py  test_launch_zalo_account.py  test_launch_zalo_chat.py  test_local_zalo_message_webhook_server.py  test_manage_zalo_profiles.py  test_manage_zalo_workspace.py  test_mariadb_message_store.py  test_monitor_zca_listener.py  test_playwright_zalo_live_event_listener.py  test_run_workflow.py  test_subprocess_chrome_process_launcher.py  test_subprocess_zca_listener_process.py  test_test_proxy_connection.py  test_windows_chrome_window_arranger.py  test_workflow_loader.py  test_zalo_app_live_event_status.py  test_zalo_live_event_injection_script.py  test_zalo_live_event_monitor.py
(+85 files in other folders)
